--- a/css/main/main.css
+++ b/css/main/main.css
@@ -47,9 +47,7 @@
   background-color: #ffffff;
   border: 1px solid #CCCCCC;
   border-radius: 20px;
-  cursor: pointer;
 }
-.div-rank-layout:hover { background-color: #f5f5f5; }
 
 /* 팔로워 - 한 줄 소개, 게시판 - 제목, 본문 말줄임표  */
 .div-skip {
@@ -150,6 +148,7 @@
 .div-board-info-wrap {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
   height: 80px;
   margin-bottom: 15px;
@@ -168,8 +167,10 @@
 }
 
 .div-board-image > img {
-  width: 100%;
+  width: 140px;
   height: 100%;
+  margin-left: 5px;
+
   object-fit:cover;
   border-radius: 10px;
 }
