--- a/css/community/community.css
+++ b/css/community/community.css
@@ -2,7 +2,6 @@
 #DIV-SEARCH-WRAP {
   display: flex;
   height: 70px;
-  margin-top: 40px;
 }
 
 /* 셀렉트 기본 화살표 없애고 화살표 직접 지정 */
@@ -10,7 +9,7 @@ select {
   -webkit-appearance: none; /* for chrome */
   -moz-appearance: none; /*for firefox*/
   appearance: none;
-  background: #fff url('../../image/community/search-arrow.png') no-repeat 97% 50%/15px auto;
+  background: #fff url('../../image/community/search_arrow.png') no-repeat 97% 50%/15px auto;
   background-position:  right 10px center;
 }
 select:focus { outline: none; }
@@ -71,20 +70,17 @@ select::-ms-expand{ display: none;/*for IE10,11*/ }
   color: #555555;
 }
 
+
 /* 게시글 1개 */
+/* 유저 프로필 사진 호버시 */
+.div-go-user-page > img:hover { border: 1px, solid #006497; }
+
 /* 이미지가 있을 경우 너비 조정 */
 .has-img .div-profile-post-wrap {
   width: calc(100% - 295px); /* 이미지 영역 너비 만큼 뺌 (예시값) */
 }
 
-.div-age {
-  padding: 3px 7px;
-  background-color: #cccccc;
-
-  border-radius: 7px;
-  color: #fff;
-  font-size: 17px;
-}
+.div-age { font-size: 17px; }
 
 /* 게시글에 등록된 이미지 */
 .div-post-img {
