--- a/css/layout/main-layout.css
+++ b/css/layout/main-layout.css
@@ -15,9 +15,11 @@ a {
 
 ul { list-style-type: none; }
 
+/* -------------------------------------------------------------- */
+
 /* 상단 공통 헤더 영역 */
 #HEADER-CONTAINER {
-  width: 80%;
+  width: 75%;
   margin: auto;
 }
 
@@ -73,12 +75,115 @@ ul { list-style-type: none; }
   color: #04B2D9;
 }
 
+/* -------------------------------------------------------------- */
+
 /* 메인 컨텐츠 영역 */
 #MAIN-CONTAINTER {
-  width: 80%;
+  width: 75%;
   margin: auto;
   padding: 35px 0 150px;
 }
+
+/* 상세, 작성 페이지 공통 라인 영역 */
+.section-line {
+  width: 90%;
+  min-width: 600px;
+  margin: auto;
+  padding: 0 45px;
+  background-color: #fff;
+
+  border: 1px solid #cccccc;
+  border-radius: 7px;
+}
+
+/* -------------------------------------------------------------- */
+
+/* 유저 닉네임 - 크게 */
+.div-nickname {
+  margin: 0 10px;
+  font-size: 22px;
+  font-weight: 500;
+}
+
+/* 유저 닉네임 - 작게 */
+.div-nick {
+  margin-right: 15px;
+  font-weight: 500;
+}
+.div-nick:hover { color: #006497; }
+
+/* 유저 나이대 */
+.div-age {
+  padding: 3px 7px;
+  background-color: #cccccc;
+
+  border-radius: 7px;
+  color: #fff;
+}
+
+/* -------------------------------------------------------------- */
+
+/* 게시글이 없을 경우 */
+.div-post-none {
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  color: #555555;
+  font-size: 20px;
+}
+
+/* -------------------------------------------------------------- */
+
+/* 버튼 스타일 */
+.button-style {
+  padding: 5px;
+
+  border: none;
+  border-radius: 7px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.basic-button {
+  background-color: #006497;
+  color: #fff;
+}
+.basic-button:hover { background-color: #00263A; }
+
+.follow-btn {
+  background-color: #BDBDBD;
+  color: #fff;
+}
+.follow-btn:hover { background-color: #a9a9a9; }
+
+.list-button {
+  margin-right: 15px;
+  background-color: #fff;
+
+  border: 3px solid #999999 !important;
+  border-radius: 5px!important;
+  color: #999999;
+}
+.list-button:hover {
+  border: 3px solid #666666 !important;
+  color: #666666;
+}
+
+.blue-line-button {
+  background-color: #fff;
+
+  border: 3px solid #006497 !important;
+  border-radius: 5px!important;
+  color: #006497;
+}
+.blue-line-button:hover {
+  border: 3px solid #00263A !important;
+  color: #00263A;
+}
+
+/* -------------------------------------------------------------- */
 
 /* 하단 푸터 영역 */
 #FOOTER-CONTAINER {
@@ -88,7 +193,7 @@ ul { list-style-type: none; }
 }
 
 #DIV-FOOTER-WRAP {
-  width: 80%;
+  width: 75%;
   margin: auto;
   padding: 60px 0;
   border-top: 1px solid #DDDDDD;
@@ -104,20 +209,32 @@ ul { list-style-type: none; }
 /* -------------------------------------------------------------- */
 
 /* 페이지네이션 */
-#DIV-PAGENATION-WRAP > ul {
+#DIV-PAGENATION-WRAP {
+  margin-top: 120px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 80px;
 
   color: #cccccc;
+  font-weight: 500;
 }
 
-#DIV-PAGENATION-WRAP > ul > li { cursor: pointer; }
+.div-page-btn-wrap {
+  width: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-.li-pagenation {
+#DIV-PAGENATION-WRAP > ul {
+  display: flex;
+}
+
+.pagenation {
   margin: 0 10px;
+
   font-size: 23px;
+  cursor: pointer;
 }
 
 .page {
@@ -128,7 +245,6 @@ ul { list-style-type: none; }
   justify-content: center;
 
   border: 1px solid #cccccc;
-  font-weight: 500;
 }
 
 .page:hover {
@@ -136,10 +252,7 @@ ul { list-style-type: none; }
   color: #064973;
 }
 
-.previous, .next {
-  font-size: 25px;
-  margin: 0 25px;
-}
+.previous, .next { font-size: 25px; }
 .previous:hover, .next:hover { color: #064973; }
 
 /* 현재 페이지 */
@@ -152,3 +265,80 @@ ul { list-style-type: none; }
   border: none;
   color: #fff;
 }
+
+/* -------------------------------------------------------------- */
+
+/* 알람 모달창 */
+.div-alert-container {
+  position: fixed; /* ✅ fixed로 변경 */
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 65%);
+
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+.alert-active { display: flex !important; }
+
+.div-alert-wrap {
+  display: inline-block;
+  min-width: 400px;
+  margin-bottom: 170px;
+  padding: 30px 40px;
+  background-color: #fff;
+
+  border-radius: 10px;
+}
+
+.div-alert-content {
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.div-alert-btn-wrap {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 40px;
+}
+
+.div-alert-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 65px;
+  padding: 8px 10px;
+
+  border-radius: 5px;
+  letter-spacing: 3px;
+  cursor: pointer;
+}
+
+.div-alert-btn:not(:last-child) {
+  margin-right: 15px;
+}
+
+.alert-ok {
+  background-color: #064973;
+
+  border: 3px solid #064973;
+  color: #fff;
+  font-weight: 500;
+} 
+.alert-ok:hover {
+  background-color: #00263A;
+  border: 3px solid #00263A;
+} 
+
+.alert-no {
+  border: 3px solid #999999;
+  color: #999999;
+  font-weight: 700;
+} 
+.alert-no:hover {
+  border: 3px solid #666666;
+  color: #666666;
+} 
+
