--- a/css/community/community_view.css
+++ b/css/community/community_view.css
@@ -301,6 +301,7 @@ textarea:focus { outline: none; }
 .div-re-comment-btn-wrap {
   width: 100%;
   font-size: 19px;
+  flex: 1;
 }
 
 .div-re-comment-btn {
@@ -322,7 +323,6 @@ textarea:focus { outline: none; }
 }
 
 .div-comment-btn-wrap {
-  width: 97px;
   padding-left: 20px;
   display: flex;
 
@@ -350,17 +350,40 @@ textarea:focus { outline: none; }
 .div-re-comment-write {
   width: 100%;
   height: 85px;
+  flex: 1;
+  box-sizing: border-box;
+  padding: 15px 20px;
+
+  border: 1px solid #cccccc;
+  border-radius: 10px;
 }
 
 #TEXTAREA-RE-COMMENT-TXT {
   width: 100%;
   height: 100%;
-  padding: 15px 20px;
+
+  border: none;
+  font-family: inherit;
+}
+
+.textarea-btn-wrap { width: 85px; }
+
+/* 댓글 수정 시 */
+.div-comment-update-wrap {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.div-comment-update {
+  width: 100%;
+  height: 90px;
+  flex: 1;
   box-sizing: border-box;
+  padding: 15px 20px;
 
   border: 1px solid #cccccc;
   border-radius: 10px;
-  font-family: inherit;
 }
 
 /* 댓글이 없을 경우 */
