--- a/css/main/main.css
+++ b/css/main/main.css
@@ -50,9 +50,9 @@
 
 /* 팔로워 - 한 줄 소개, 게시판 - 제목, 본문 말줄임표  */
 .div-skip {
-  height: 60px;
+  height: 50px;
 
-  font-size: 20px;
+  font-size: 17px;
   color: #555555;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -87,7 +87,8 @@
 .div-nickname {
   margin: 15px 0 11px;
 
-  font-size: 22px;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .p-user-intro {
@@ -97,7 +98,10 @@
   text-align: center;
 }
 
-.button-style { width: 90px; }
+.button-style {
+  width: 90px;
+  padding: 8px;
+}
 
 .div-user-info-wrap { color: #999999; }
 .div-user-info-wrap div:first-child { margin-bottom: 5px;}
@@ -148,7 +152,8 @@
 .div-board-title {
   padding-top: 10px;
 
-  font-size: 20px;
+  font-size: 17px;
+  font-weight: 600;
   color: #000000;
 }
 
