--- a/css/layout/main-layout.css
+++ b/css/layout/main-layout.css
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 body { background-color: #FDFDFD; }
@@ -33,7 +33,10 @@ ul { list-style-type: none; }
   margin-bottom: 25px;
 }
 
-#DIV-HEADER-TOP div { display: inline-block; }
+#DIV-HEADER-TOP div {
+  display: inline-block;
+  font-weight: 500;
+}
 
 #IMG-LOGO {
   height: 35px;
@@ -86,7 +89,7 @@ ul { list-style-type: none; }
 
 /* 상세, 작성 페이지 공통 라인 영역 */
 .section-line {
-  width: 90%;
+  width: 85%;
   min-width: 600px;
   margin: auto;
   padding: 0 45px;
@@ -233,13 +236,13 @@ ul { list-style-type: none; }
 .pagenation {
   margin: 0 10px;
 
-  font-size: 23px;
+  font-size: 18px;
   cursor: pointer;
 }
 
 .page {
-  width: 45px;
-  height: 45px;
+  width: 35px;
+  height: 35px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -252,7 +255,13 @@ ul { list-style-type: none; }
   color: #064973;
 }
 
-.previous, .next { font-size: 25px; }
+.previous, .next {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  font-size: 21px;
+}
 .previous:hover, .next:hover { color: #064973; }
 
 /* 현재 페이지 */
@@ -262,7 +271,6 @@ ul { list-style-type: none; }
 }
 .selected:hover {
   background-color: #064973;
-  border: none;
   color: #fff;
 }
 
@@ -296,6 +304,7 @@ ul { list-style-type: none; }
 .div-alert-content {
   font-weight: 500;
   letter-spacing: 1px;
+  line-height: 1.5em;
 }
 
 .div-alert-btn-wrap {
