--- a/css/login/join-required.css
+++ b/css/login/join-required.css
@@ -16,7 +16,6 @@
   flex-direction: row-reverse;
   align-items: center;
 
-  font-size: 19px;
   font-weight: 500;
   text-align: right;
 }
@@ -29,9 +28,10 @@
   margin-top: 5px;
 
   color: #555555;
-  font-size: 16px;
-  text-align: center;
+  font-size: 13px;
 }
+
+#DIV-NICK-CHECK { text-align: center; }
 
 .required-input { width: 100%; }
 
@@ -60,6 +60,8 @@ input[type='date']::-webkit-calendar-picker-indicator {
   flex-direction: column;
   align-items: flex-end;
   margin-right: 25px;
+
+  text-align: right;
 }
 
 #DIV-AGE {
