--- a/css/community/community.css
+++ b/css/community/community.css
@@ -106,10 +106,11 @@ select::-ms-expand{ display: none;/*for IE10,11*/ }
 
 .div-hashtag {
   margin-right: 10px;
-  padding: 4px 8px;
+  padding: 5px 10px;
   background-color: #ededed;
 
   font-size: 16px;
+  font-weight: 600;
 }
 
 /* 작성일짜 + 개수 */
@@ -125,10 +126,10 @@ select::-ms-expand{ display: none;/*for IE10,11*/ }
 .div-count-wrap {
   display: flex;
   align-items: center;
-  margin-left: 20px;
+  margin-left: 15px;
 
   color: #999999;
-  font-size: 20px;
+  font-weight: 600;
 }
 
 .div-count-wrap > img {
