--- a/css/layout/list-layout.css
+++ b/css/layout/list-layout.css
@@ -16,19 +16,21 @@
 /* 페이지 설명, 서브 설명 */
 #P-TITLE {
   font-size: 30px;
-  font-weight: 700;
+  font-weight: 800;
 }
 
 #P-SUB-TITLE {
   margin-top: 10px;
+
   color: #999999;
-  line-height: 1.5em;
-  letter-spacing: 1px;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.7em;
 }
 
 /* 목록 컨텐츠 영역 */
-#SECTION-SEARCH-LIST-WRAP{ margin-top: 100px; }
-#DIV-LIST-WRAP { margin: 70px 0; }
+#SECTION-SEARCH-LIST-WRAP{ margin-top: 80px; }
+#DIV-LIST-WRAP { margin: 60px 0; }
 
 /* 글 개수 */
 #DIV-POST-COUNT {
@@ -81,7 +83,7 @@
   height: 30px;
 
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 600;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -89,10 +91,11 @@
 }
 
 .div-content-skip {
-  height: 50px;
+  height: 60px;
+  margin-top: 7px;
 
   overflow: hidden;
-  font-size: 18px;
+  font-size: 19px;
   color: #555555;
   text-overflow: ellipsis;
   word-break: keep-all;
@@ -104,25 +107,31 @@
 /* 게시글 작성일 */
 .div-time {
   color: #999999;
-  font-size: 19px;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 /* -------------------------------------------------------------- */
 
 /* 글작성 버튼 영역 */
 #DIV-WRITE-WRAP {
+  display: flex;
+  justify-content: flex-end;
   margin-top: 110px;
-  text-align: right;
 }
 
 .div-write-btn {
+  width: 85px;
   padding: 15px 20px;
   background-color: #064973;
+  
 
   border: none;
   border-radius: 7px;
   color: #fff;
-  font-size: 20px;
+  font-size: 19px;
+  text-align: center;
+  line-height: 1.5;
   cursor: pointer;
 }
 
