--- a/css/login/login-layout.css
+++ b/css/login/login-layout.css
@@ -32,10 +32,14 @@
   margin-bottom: 17px;
 
   font-size: 23px;
-  font-weight: 500;
+  font-weight: 700;
 }
 
-#P-LOGIN-SUB-TITLE { height: 55px; }
+#P-LOGIN-SUB-TITLE {
+  height: 55px;
+  font-weight: 500;
+  line-height: 1.5em;
+}
 
 /* 회원가입 입력 영역 */
 #SECTION-JOIN-CONTAINER { margin-top: 20px; }
@@ -46,6 +50,7 @@
 
   border: 2px solid #999999;
   border-radius: 10px;
+  font-weight: 600;
   text-align: center;
 }
 
@@ -67,6 +72,7 @@
   border: none;
   border-radius: 10px;
   color: #ffffff;
+  font-weight: 600;
 }
 
 .btn-no-join { background-color: #dddddd; }
