--- a/css/login/login.css
+++ b/css/login/login.css
@@ -13,8 +13,7 @@
 
   border: 1px solid #000000;
   border-radius: 20px;
-  font-size: 22px;
-  font-weight: 600;
+  font-weight: 700;
   cursor: pointer;
 }
 
@@ -28,5 +27,10 @@
 
 .btn-social-wrap > img {
   height: 36px;
+  margin-right: 10px;
+}
+
+.span-login-text {
+  font-size: 19px;
   margin-right: 10px;
 }
