--- a/css/layout/main-layout.css
+++ b/css/layout/main-layout.css
@@ -8,6 +8,7 @@
   padding: 0;
   font-family: 'NanumSquare', 'Noto Sans', sans-serif;
   font-size: 17px;
+  font-weight: 600;
   letter-spacing: 1px;
 }
 
@@ -103,6 +104,20 @@ ul { list-style-type: none; }
   border-radius: 7px;
 }
 
+/* 페이지 설명, 서브 설명 */
+#P-TITLE {
+  font-size: 30px;
+  font-weight: 800;
+}
+
+#P-SUB-TITLE {
+  margin-top: 10px;
+
+  color: #999999;
+  font-size: 18px;
+  line-height: 1.7em;
+}
+
 /* -------------------------------------------------------------- */
 
 /* 유저 닉네임 - 크게 */
@@ -115,7 +130,6 @@ ul { list-style-type: none; }
 /* 유저 닉네임 - 작게 */
 .div-nick {
   margin-right: 15px;
-  font-weight: 600;
 }
 .div-nick:hover { color: #006497; }
 
@@ -152,7 +166,6 @@ ul { list-style-type: none; }
 
   border: none;
   border-radius: 7px;
-  font-weight: 600;
   letter-spacing: 1.5px;
   cursor: pointer;
 }
@@ -227,7 +240,6 @@ ul { list-style-type: none; }
   justify-content: center;
 
   color: #cccccc;
-  font-weight: 600;
 }
 
 .div-page-btn-wrap {
@@ -339,23 +351,23 @@ ul { list-style-type: none; }
 .alert-ok {
   background-color: #064973;
 
-  border: 3px solid #064973;
+  border: 2px solid #064973;
   color: #fff;
   font-weight: 500;
 } 
 .alert-ok:hover {
   background-color: #00263A;
-  border: 3px solid #00263A;
+  border: 2px solid #00263A;
 } 
 
 .alert-no {
   display: none;
-  border: 3px solid #999999;
+  border: 2px solid #999999;
   color: #999999;
   font-weight: 700;
 } 
 .alert-no:hover {
-  border: 3px solid #666666;
+  border: 2px solid #666666;
   color: #666666;
 }
 .modal-coutinue { display: flex; }
