EDIT : 20250626 게시글 작성 페이지 - 해시태그 작업 중

--- a/css/community/community-write.css
+++ b/css/community/community-write.css
@@ -1,18 +1,4 @@
-textarea:focus { outline: 3px solid #064973; }
+/* 해시태그 */
 
-#DIV-PAGE-TITLE-WRAP {
-  margin: 60px 40px 45px;
-}
-
-#DIV-WRITE-WRAP {
-  border: 1px solid;
-}
-
-.div-one-column-wrap {
-  display: flex;
-  align-items: center;
-}
-
-.div-text-count-wrap {
-  text-align: right;
-}
+/* 목록으로 버튼 */
+.list-button > span { font-weight: 900; }
