--- a/css/layout/main-layout.css
+++ b/css/layout/main-layout.css
@@ -32,6 +32,14 @@ input[type="text"]:focus {
   outline: 3px solid #064973;
 }
 
+input::placeholder,
+textarea::placeholder,
+.tagify__input::placeholder {
+  color: #999;
+  opacity: 1;
+  font-weight: 600;
+}
+
 /* -------------------------------------------------------------- */
 
 /* 상단 공통 헤더 영역 */
@@ -315,6 +323,7 @@ input[type="text"]:focus {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 65%);
+  z-index: 10;
 
   display: none;
   justify-content: center;
