--- a/css/layout/list-layout.css
+++ b/css/layout/list-layout.css
@@ -64,7 +64,7 @@
 }
 
 /* 제목, 본문 말줄임표 */
-.div-title-skip {
+.div-one-skip {
   height: 30px;
 
   font-size: 20px;
@@ -75,7 +75,7 @@
   word-break: break-all;
 }
 
-.div-content-skip {
+.div-two-skip {
   height: 55px;
   margin-top: 7px;
 
@@ -106,17 +106,12 @@
 }
 
 .div-write-btn {
-  width: 85px;
-  padding: 15px 20px;
+  padding: 10px 15px;
   background-color: #064973;
   
-
   border: none;
   border-radius: 7px;
   color: #fff;
-  font-size: 19px;
-  text-align: center;
-  line-height: 1.5;
   cursor: pointer;
 }
 
