--- a/css/login/join-optional.css
+++ b/css/login/join-optional.css
@@ -3,18 +3,26 @@
 #DIV-PROFILE-SETTINGS-WRAP { margin-top: 30px; }
 
 #DIV-PROFILE-IMG {
-  width: 110px;
-  height: 110px;
   margin: auto;
   display: flex;
   align-items: center;
   
-  border: 8px solid #dddddd;
   border-radius: 100%;
   overflow: hidden;
 }
 
-#DIV-PROFILE-IMG:hover { border: 8px solid #999999; }
+.none-img { 
+  width: 110px;
+  height: 110px;
+  border: 8px solid #dddddd;
+}
+.none-img:hover { border: 8px solid #999999; }
+.has-img {
+  width: 124px;
+  height: 124px;
+  border: 2px solid #dddddd;
+}
+.has-img:hover { border: 2px solid #999999; }
 
 #DIV-PROFILE-IMG > label {
   width: 100%;
