--- a/css/myPage/myPage.css
+++ b/css/myPage/myPage.css
@@ -8,34 +8,71 @@
     padding: 40px 0;
 }
 
-/* 카테고리 - 작성글, 스크랩 */
-#UL-CATEGORY {
+/* 슬라이드 효과를 위한 글 목록을 감싸는 wrap */
+.list-slide-wrap {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    transition: transform 0.3s ease;
+}
+
+.write-list-wrap,
+.scrap-list-wrap {
+    width: 100%;
+    flex-shrink: 0;
+}
+
+#DIV-CATEGORY-WRAP {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
 
     border-top: 1px solid #cccccc;
 }
 
-#UL-CATEGORY > li {
-    padding: 15px 2px;
-    color: #999999;
+#UL-CATEGORY {
+    display: flex;
+    position: relative;
 }
 
-#UL-CATEGORY > li:hover {
-    color: #064973;
+.li-category-wrap {
+    padding: 15px 2px;
+    color: #999999;
     cursor: pointer;
 }
 
-/* 카테고리 선택 시 - 작성글, 스크랩 */
-.ca-selected { border-top: 4px solid #04B2D9; }
-.ca-selected  > .div-category { color: #000; }
-/* 현재 카테고리를 제외한 카테고리는 안 보이게 설정 */
-.none-show { display: none; }
-
 .li-category-wrap:not(:last-child) {
     margin-right: 50px !important;
+}
+
+/* 카테고리 선택 시 - 작성글, 스크랩 */
+.ca-selected {
+    border-top: 4px solid #04B2D9;
+    position: absolute;
+    top: 0;
+    transition: all 0.3s ease;
+}
+
+.div-category {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.div-selected { color: #000000; }
+
+.div-category > img {
+    height: 28px;
+    margin-top: 2px;
+    margin-right: 7px;
+}
+
+.li-category-wrap:hover {
+    color: #006497;
+    /* border-top: 4px solid #cccccc;
+    position: absolute;
+    top: 0;
+    transition: all 0.1s ease; */
 }
 
 /* 스크랩한 게시글 */
