--- a/css/layout/main-layout.css
+++ b/css/layout/main-layout.css
@@ -124,6 +124,11 @@ textarea::placeholder,
 }
 
 /* 페이지 설명, 서브 설명 */
+#P-CURRENT-PAGE {
+  color: #999999;
+  font-size: 16 px;
+}
+
 #P-TITLE {
   font-size: 30px;
   font-weight: 800;
