--- a/css/login/join-required.css
+++ b/css/login/join-required.css
@@ -8,16 +8,23 @@
   letter-spacing: 0.5px;
 }
 
-.div-join-text {
-  width: 30%;
-  height: 50px;
-  margin-right: 25px;
+#DIV-AGE-WRAP, .div-join-text {
+  width: 32%;
   display: flex;
+  margin-right: 25px;
+  text-align: right;
+}
+
+.div-join-text {
+  height: 54px;
   flex-direction: row-reverse;
   align-items: center;
-
   font-weight: 500;
-  text-align: right;
+}
+
+#DIV-AGE-WRAP {
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .div-join-input-wrap {
@@ -55,16 +62,6 @@ input[type='date']::-webkit-calendar-picker-indicator {
 }
 
 /* 나이 공개 여부 */
-#DIV-AGE-WRAP {
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  margin-right: 25px;
-
-  text-align: right;
-}
-
 #DIV-AGE {
   height: 50px;
   display: flex;
@@ -75,7 +72,6 @@ input[type='date']::-webkit-calendar-picker-indicator {
 }
 
 input[type='radio'] { display: none;}
-
 
 .div-age-visible-wrap {
   display: flex;
