--- a/css/userPage/myPage-settings.css
+++ b/css/userPage/myPage-settings.css
@@ -1,6 +1,5 @@
 #MAIN-CONTAINTER { border-top: 1px solid #dddddd; }
 #DIV-PAGE-TITLE-WRAP { margin: 60px 40px 50px; }
-
 .section-line > form { margin-bottom: 60px; }
 
 /* 프로필 이미지 */
@@ -148,7 +147,7 @@ input[type="radio"]:not(:checked) + span:hover { background-color: #A9A9A9; }
 }
 
 .disabled {
-  background-color: #999999;
+  background-color: #dddddd;
   color: #fff;
   cursor: not-allowed;
 }
