--- a/css/layout/main-layout.css
+++ b/css/layout/main-layout.css
@@ -177,6 +177,7 @@ textarea::placeholder,
 
   color: #555555;
   font-size: 20px;
+  text-align: center;
 }
 
 /* -------------------------------------------------------------- */
