--- a/css/message/message-list.css
+++ b/css/message/message-list.css
@@ -1,5 +1,5 @@
 #MAIN-CONTAINTER {
-  padding: 0 0 150px;
+  padding: 0 0 100px;
   border-top: 1px solid #DDDDDD;
 }
 
@@ -123,7 +123,7 @@
 
 /* 카운트 */
 .div-msg-count-wrap {
-  width: 85%;
+  width: 84%;
   margin: auto;
   margin-bottom: 20px;
 
@@ -159,23 +159,43 @@
 .div-content { margin-left: 65px; }
 .div-time-wrap {
   margin-top: 15px;
-  text-align: right;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
+/* 받은 메세지 - 미열람한 메세지 */
 .div-none-show {
   margin-top: 5px;
   margin-left: 15px;
-  color: #999999;
+  padding: 5px 6px;
+  color: #999;
+  border: 1px solid #999;
+  border-radius: 4px;
+}
+
+.unread-msg .div-nickname,
+.unread-msg .div-content {
+  font-weight: 700;
+  color: #222;
+}
+.unread-msg .div-content { font-size: 19px; }
+.unread-msg .div-nickname { font-size: 22px; }
+
+.unread-msg {
+  background-color: #e8f3ff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: background 0.3s ease;
 }
 
 /* 페이지네이션 */
 .div-pagenation-wrap {
-    margin-top: 120px;
-    margin-bottom: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #cccccc;
+  margin-top: 120px;
+  margin-bottom: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #cccccc;
 }
 .div-pagenation-wrap > ul { display: flex; }
 
