EDIT : 20250701 유저 개인 페이지 상세 조정

--- a/css/userPage/userPage.css
+++ b/css/userPage/userPage.css
@@ -1,3 +1,13 @@
-#DIV-LIST-CONTAINER {
-  margin-top: 0;
+
+/* 팔로우, 팔로잉 버튼 */
+.button-style {
+  padding: 10px 10px;
+  border-radius: 5px;
 }
+.button-style:last-child { margin: 0; }
+
+/* 게시글 목록 */
+#DIV-LIST-CONTAINER { margin-top: 0; }
+
+/* 게시글이 없을 경우 */
+.div-post-none { height: 300px; }
