EDIT : 20250701 메세지 목록 완료

--- a/css/layout/main-layout.css
+++ b/css/layout/main-layout.css
@@ -155,7 +155,10 @@ textarea::placeholder,
   margin-right: 15px;
   font-weight: 600;
 }
-.div-nick:hover { color: #006497; }
+.div-nick:hover {
+  color: #006497;
+  cursor: pointer;
+}
 
 /* 유저 나이대 */
 .div-age {
