--- a/css/layout/userPage-layout.css
+++ b/css/layout/userPage-layout.css
@@ -176,7 +176,7 @@
     font-weight: 800;
 }
 
-.modal-follow-close {
+.modal-close-img {
     width: 18px;
     position: absolute;
     right: 5px;
